<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RescueMe</string>

    <!--Login Activity-->
    <string name="logo_description">RescueMe logo</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="register">Register Now !</string>

    <!--Register Activity-->
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="agreement">By clicking <b>\"Sign Up\"</b> you\'re agreeing to the Rescue Me <b>Terms of Service</b> and <b>Privacy Police</b>.</string>

    <!--Fragments-->
    <string name="home_tab">Home</string>
    <string name="emergency_tab">Emergency</string>
    <string name="settings_tab">Settings</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="save">Save</string>
    <string name="exit_description">Sign Out Button</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_pop_up">PopUpActivity</string>

<!--    Settings Activity-->
    <string name="profile_picture">Profile picture</string>
</resources>
