<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/White"
        android:contentDescription="@string/logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rescueme_logo2" />

    <EditText
        android:id="@+id/login_email_prompt"
        android:layout_width="373dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/Red"
        android:drawableEnd="@drawable/ic_email"
        android:hint="@string/email_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/LightGrey"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_logo" />

    <EditText
        android:id="@+id/login_password_prompt"
        android:layout_width="373dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/Red"
        android:drawableEnd="@drawable/ic_password"
        android:hint="@string/password_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/LightGrey"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_prompt" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="121dp"
        android:layout_height="19dp"
        android:layout_gravity="bottom"
        android:onClick="onClick"
        android:text="@string/forgot_password"
        android:textColor="@color/LightGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_prompt"
        app:layout_constraintVertical_bias="0.06" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/gradient"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/gradient"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.127" />

</androidx.constraintlayout.widget.ConstraintLayout>


