<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".FragmentEmergency">

    <ImageView
        android:id="@+id/tab2_logo"
        android:layout_width="209dp"
        android:layout_height="141dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/rescueme_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148" />

    <EditText
        android:id="@+id/emergency_first_name_prompt"
        android:layout_width="373dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:drawableEnd="@drawable/ic_name"
        android:hint="@string/first_name_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/LightGrey"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab2_logo" />

    <EditText
        android:id="@+id/emergency_last_name_prompt"
        android:layout_width="373dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:drawableEnd="@drawable/ic_name"
        android:hint="@string/last_name_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/LightGrey"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emergency_first_name_prompt"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/emergency_email_prompt"
        android:layout_width="373dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:drawableEnd="@drawable/ic_email"
        android:hint="@string/email_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/LightGrey"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emergency_last_name_prompt" />

    <EditText
        android:id="@+id/emergency_phone_number_prompt"
        android:layout_width="373dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:drawableEnd="@drawable/ic_number"
        android:hint="@string/phone_number_hint"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textColor="@color/LightGrey"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emergency_last_name_prompt" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:background="@drawable/gradient"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emergency_phone_number_prompt"
        app:layout_constraintVertical_bias="0.317" />

</androidx.constraintlayout.widget.ConstraintLayout>